# rust-root-task-demo

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  test.py
.cargo/: config.toml
.devcontainer/: devcontainer.json
.reuse/: dep5
crates/example/: Cargo.toml
docker/: Dockerfile  Makefile  kernel-settings.cmake
support/targets/: README.md  aarch64-sel4.json
