[package]
name = "example"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies.sel4]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "96b27b7ed5c7ad1c53d5b7adca159d3fc5283b9e"

[dependencies.sel4-root-task-runtime]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "96b27b7ed5c7ad1c53d5b7adca159d3fc5283b9e"
